- bug fixed: HTML error on nested UL in categories menu.
- bug 161 fixed: guest_id not taken into account for history table insert.

- bug 164 fixed: category inserted in history table becomes too long if HTML
  tags are kept.


git-svn-id: http://piwigo.org/svn/trunk@876 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/template/yoga/menubar.css
+++ b/template/yoga/menubar.css
@@ -49,9 +49,15 @@ BODY#theAdminPage #menubar {
     font-size: 100%;
     margin-top: 0;
 }
-#menubar LI.selected {
-    font-weight: bold;
+
+#menubar LI.selected A {
+  font-weight: bold;
 }
+
+#menubar LI.selected LI A {
+  font-weight: normal;
+}
+
 #menubar HR {
     display: block;
     margin: 10px auto;
